# Hackathon_Dec2025

./: .dockerignore  DEPLOYMENT.md  Dockerfile  GEMINI_SETUP.md  LLM_INTERFACE.md  README.md  cloudbuild.yaml  cloudbuild.yaml.txt  index.html  pyproject.toml
aibot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/: .env  .env.example  main.py
backend/agents/: prompts.py  root_agent.py
backend/api/: routes.py
backend/services/: llm_interface.py  security.py
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChatInterface.tsx
tests/: test_api.py
